--- a/webapp/package.json
+++ b/webapp/package.json
@@ -27,6 +27,7 @@
   "homepage": "https://github.com/dkw-aau/archiving-demo#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "csv": "^6.2.5",
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
     "twilio": "^2.5.2",
