--- a/webapp/package.json
+++ b/webapp/package.json
@@ -30,6 +30,7 @@
     "csv": "^6.2.5",
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
+    "plotly.js-dist-min": "^2.18.1",
     "twilio": "^2.5.2",
     "typescript": "^4.9.4"
   },
