--- a/webapp/package.json
+++ b/webapp/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/dkw-aau/archiving-demo#readme",
   "dependencies": {
+    "@triply/yasgui": "^4.2.28",
     "cors": "^2.8.5",
     "csv": "^6.2.5",
     "express": "^4.18.2",
